5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4325/executions/1602_1016.log
== TEST (2019-03-20 19:34:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladoA = float(input("Lado A:"))
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:34:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladoA = float(input("Lado A:"))
ladoB = float(input("Lado B:"))
ladoC = float(input("Lado C:"))
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:35:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladoA = float(input("Lado A:"))
ladoB = float(input("Lado B:"))
ladoC = float(input("Lado C:"))
semi = ((ladoA+ladoB+ladoC)/2)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:35:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladoA = float(input("Lado A:"))
ladoB = float(input("Lado B:"))
ladoC = float(input("Lado C:"))
semi = ((ladoA+ladoB+ladoC)/2)
print(semi)
-- OUTPUT:
21.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladoA = float(input("Lado A:"))
ladoB = float(input("Lado B:"))
ladoC = float(input("Lado C:"))
semi = ((ladoA+ladoB+ladoC)/2)
print(semi)
-- EXECUTION TIME:
0.182273
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:36:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladoA = float(input("Lado A:"))
ladoB = float(input("Lado B:"))
ladoC = float(input("Lado C:"))
semi = ((ladoA+ladoB+ladoC)/2)
area = (sqrt())
print(round(area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    area = (sqrt())
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:37:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladoA = float(input("Lado A:"))
ladoB = float(input("Lado B:"))
ladoC = float(input("Lado C:"))
semi = ((ladoA+ladoB+ladoC)/2)
arena = (semi*(semi-ladoA)*(semi-ladoB)*(semi-ladoC))
area = (sqrt())
print(round(area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area = (sqrt())
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:38:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladoA = float(input("Lado A:"))
ladoB = float(input("Lado B:"))
ladoC = float(input("Lado C:"))
semi = ((ladoA+ladoB+ladoC)/2)
arena = (semi*(semi-ladoA)*(semi-ladoB)*(semi-ladoC))
area = (sqrt(arena))
print(round(area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area = (sqrt(arena))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:38:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladoA = float(input("Lado A:"))
ladoB = float(input("Lado B:"))
ladoC = float(input("Lado C:"))
semi = ((ladoA+ladoB+ladoC)/2)
arena = (semi*(semi-ladoA)*(semi-ladoB)*(semi-ladoC))
area = (sqrt(arena))
print(round(area,5))
-- EXECUTION TIME:
0.23014
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 9, in <module>
    area = (sqrt(arena))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
